# star-voting

./: .gitignore  Cargo.toml  LICENSE  README.md  Secrets.toml.example  Shuttle.toml  deploy.sh
.shuttle/: config.toml
backend/: Cargo.toml
backend/.cargo/: config.toml
backend/.sqlx/: config.toml  query-128db182104dec0fe6aba06791c88cf4b606ca56239a3c6c9bbe8000b3532eb0.json  query-1d62dee9b2c5f47c744654cbda6820770a5fa50f68321d07c81fa4b6781426e0.json  query-21a3e667709e4c31e5fcacf279a04db619927aca8308444176de41b44f5ca9e1.json  query-330a5a23ae90c376fadc71a258f1f0b2da1de3ff1a77bde08e6a82c3e1991e17.json  query-54db513c68ee0a29449fae47c74b0743f8b9f1e975c0810289e70af34711f2f2.json  query-6f6cf52389a1930f19cacb4a50d48dee4c2e680cb37a655c36295771ae78238e.json  query-a1b12eab30bce5033a8ad851c03d4286b14536852fe1413f23c39b8a0080a157.json  query-a9a6c2af1aa05fac0d3df481b86f25faed508e327bd1cfe11c48e20b5996abfd.json  query-cdf97e3a122c1af3ffaeeda110904c56c8ddb94310e191f0b56e8911e5257d85.json  query-d0efe8110c4f0cfe495be319b8348db35d02a068eea053f30b6f2ef64336ec6f.json  query-deedd56d44f52946ba69f70b09215f16ff0c53cea07331eb8eede2569f90ef3d.json  query-e4ce5892034f120a25dd8d689b7811baa73ed3b1c3086c7b9acb14c71546cb91.json  query-e5f289696a08f4ccf15cc1c7642d5f180258c8a178962fc30ca5b7b99052052b.json  query-f24c94150e9317be65f8538fe7313588104bafb81617e19db9a730a9039b434a.json  query-f8b937fa615dc084d27198071ed921c7c1de37469c5258cd62e14740a4a5ba3d.json
backend/migrations/: 20241107000000_initial_schema.sql
backend/src/: captcha.rs  catchers.rs  cors.rs  error.rs  lib.rs  main.rs  processor.rs  queries.rs  rate_limiter.rs  routes.rs  store.rs  utils.rs
frontend/: Cargo.toml  index.html  styles.css
frontend/src/: config.rs  hcaptcha.rs  home.rs  main.rs  render_results.rs  styles.rs  vote_ballot.rs  vote_create.rs  vote_display.rs  vote_option_manager.rs  vote_results.rs  vote_status.rs  votes.rs
shared/: Cargo.toml
shared/src/: error.rs  lib.rs  models.rs  star_logic.rs  tests.rs  user_info.rs  validation.rs
