[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
rocket-client-addr = "0.5.2"
shuttle-rocket = "0.49.0"
shuttle-runtime = "0.49.0"
shuttle-shared-db = { version = "0.49.0", features = ["postgres", "sqlx"] }
sqlx.workspace = true
serde.workspace = true
serde_json = "1.0"
time.workspace = true
tracing = "0.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
thiserror = "1.0"
rustrict = "0.7.31"
ring = "0.16"
base64 = "0.21"
tokio = { version = "1.26.0", features = ["full"] }
futures = "0.3"
hcaptcha = "2.2.1"
include_dir = "0.7"
uuid.workspace = true
shared = { path = "../shared", features = ["backend"] }