[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = "0.17"
gloo-net = "0.2"
gloo-timers = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Window", "Document", "Element", "HtmlElement", 
    "HtmlInputElement", "HtmlSelectElement"
]}
stylist = { version = "0.12", features = ["yew"] }
time = { version = "0.3", features = ["wasm-bindgen", "formatting"] }
uuid = { version = "1.6", features = ["v4", "js", "serde"] }
shared = { path = "../shared" }
console_error_panic_hook = "0.1"
futures = "0.3"
sha2 = "0.10"
base64 = "0.21"