[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
time = { version = "0.3", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
thiserror = "1.0"
base64 = "0.21"
sha2 = "0.10"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "migrate", "time", "uuid", "json"], optional = true }
rocket = { version = "0.5.1", features = ["json"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = ["Window", "Navigator"] }
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[features]
default = []
backend = ["dep:rocket", "dep:sqlx"]